WebContent/Examples/InValid/InvTemperatureSensor1.jsonld
{
  "description":"Invalid Property because of the missing Property keyword in @type array",
  "@context": [
    "https://w3c.github.io/wot/w3c-wot-td-context.jsonld",
    "https://w3c.github.io/wot/w3c-wot-common-context.jsonld"
  ],
  "@type": [
    "Sensor"
  ],
  "name": "myTempSensor",
  "base": "coap:///www.example.com:5683/temp/",
  "interaction": [
    {
      "@type": [
        "Temperature"
      ],
      "reference": "threshold",
      "name": "myTemp",
      "schema": {
        "type": "number"
      },
      "writable": false,
      "observable": true,
      "form": [
        {
          "href": "coap:///www.example.com:5683/temp/val",
          "mediaType": "application/json"
        }
      ]
    }
  ]
}